--- a/assignments.html
+++ b/assignments.html
@@ -5,7 +5,7 @@
     <title>Assignment's page</title>
   </head>
   <body>
-    <h1>This is my assignments page</h1>
+    <h1>Here are all my assignments for this class!</h1>
     <p><a href="questionnaire.txt">Assignment 1</a><br>
         <a href="assignments.html">Assignment 2</a></p>
     <p><a href="index.html">HOME</a></p>
