--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Welcome to my website!</h1>
     <h3>About Me</h3>
-    <p>My name is Beryl Arnould. I am half French, half American, but I grew up in Luxembourg with my parents and two siblings. I am a 4th year Anatomy & Cell Biology student, minoring in Music Technology. I love music, whether it's listening or playing. As a drummer, I like listening to music with a strong beat (air drumming is almost just as fun as actual drumming!). I also love being in nature, especially hiking (see the picture of me below, taken on a hike in Mont Tremblant!).</p>
+    <p>My name is Beryl Arnould. I am half French and half American, but I grew up in Luxembourg with my parents and two siblings. I am a 4th year Anatomy & Cell Biology student, minoring in Music Technology. I love music, whether it's listening or playing, and as a drummer, I like listening to music with a strong beat (air drumming is almost just as fun as actual drumming!). I also love being in nature, especially hiking (see the picture of me below, taken on a hike in Mont Tremblant!).</p>
     <img src="beryl.jpeg" width="504" height="378">
     <h3>Here are links to the classes I am taking this term:</h3>
     <p><a href="https://www.mcgill.ca/study/2021-2022/courses/biol-301"> BIOL301: Cell and Molecular Laboratory</a><br>
