--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
       <a href="https://mumt301.github.io/SidAlHussaini/">Sid Al Hussaini</a><br>
       <a href="https://mumt301.github.io/orosze/">Eric Orosz</a><br>
       <a href="https://mumt301.github.io/nicolesue/">Nicole Sue</a></p>
-    <p>Click here to see all my <a href="assignments.html">assignments</a> for this class!</p>
+    <p>Click here to see all my <a href="assignments.html"><strong>assignments</strong></a> for this class!</p>
   </body>
 </html>
