--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Beryl's Assignment 2</title>
+    <link rel="stylesheet" href="mystyle.css">
   </head>
   <body>
     <h1>Welcome to my website!</h1>
