--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Beryl's Assignment 2</title>
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="indexstyle.css">
   </head>
   <body>
-    <h1>Welcome to my website!</h1>
-    <h3>About Me</h3>
-    <p>My name is Beryl Arnould. I am half French and half American, but I grew up in Luxembourg with my parents and two siblings. I am a 4th year Anatomy & Cell Biology student, minoring in Music Technology. I love music, whether it's listening or playing, and as a drummer, I like listening to music with a strong beat (air drumming is almost just as fun as actual drumming!). I also love being in nature, especially hiking (see the picture of me below, taken on a hike in Mont Tremblant!).</p>
-    <img src="beryl.jpeg" width="504" height="378">
-    <h3>Here are links to the classes I am taking this term:</h3>
-    <p><a href="https://www.mcgill.ca/study/2021-2022/courses/biol-301"> BIOL301: Cell and Molecular Laboratory</a><br>
-      <a href="https://www.mcgill.ca/study/2021-2022/courses/exmd-504"> EXMD504: Biology of Cancer</a><br>
-      <a href="https://www.mcgill.ca/study/2021-2022/courses/biot-505"> BIOT505: Selected Topics in Biotechnology</a><br>
-      <a href="https://www.mcgill.ca/study/2021-2022/courses/mumt-301"> MUMT301: Music and the Internet</a><br>
-      <a href="https://www.mcgill.ca/study/2021-2022/courses/phys-224"> PHYS224: Physics of Music</a></p>
-    <h3>These are my classmates:</h3>
-    <p><a href="https://mumt301.github.io/Sarah-Gao/">Sarah Gao</a><br>
-      <a href="https://mumt301.github.io/Asu_Simla_Ayduran/">Asu Simla Ayduran</a><br>
-      <a href="https://mumt301.github.io/hteyssier/">Hector Teyssier</a><br>
-      <a href="https://mumt301.github.io/raviraina/">Ravi Raina</a><br>
-      <a href="https://mumt301.github.io/Rebecca-Lee/">Rebecca Lee</a><br>
-      <a href="https://mumt301.github.io/naomifung01/">Naomi Fung</a><br>
-      <a href="https://mumt301.github.io/tibetahunbay_assignment1/">Tibet Ahunbay</a><br>
-      <a href="https://mumt301.github.io/Jamie-Oneschuk-Repository-/">Jamie Oneschuk</a><br>
-      <a href="https://mumt301.github.io/SidAlHussaini/">Sid Al Hussaini</a><br>
-      <a href="https://mumt301.github.io/orosze/">Eric Orosz</a><br>
-      <a href="https://mumt301.github.io/nicolesue/">Nicole Sue</a></p>
-    <p>Click here to see all my <a href="assignments.html"><strong>assignments</strong></a> for this class!</p>
+    <center>
+      <h1>W e l c o m e &#160 t o &#160 m y &#160 w e b s i t e !</h1>
+      <h3>&#127804 About Me &#127804</h3>
+      <p>My name is Beryl Arnould.<br>
+        I'm half French and half American, but I grew up in Luxembourg with my parents and two siblings.<br>
+        I'm a 4th year Anatomy & Cell Biology student, minoring in Music Technology.<br>
+        I love music, whether it's listening or playing, and as a drummer, I like listening to music with a strong beat.<br>
+        I also love being in nature, especially hiking and camping (the picture is me on a hike in Mont Tremblant!).</p>
+      <img src="beryl.jpeg" width="504" height="378">
+      <h3>&#128211 My classes this term: &#128211</h3>
+      <p><a href="https://www.mcgill.ca/study/2021-2022/courses/biol-301"> BIOL301: Cell and Molecular Laboratory</a><br>
+        <a href="https://www.mcgill.ca/study/2021-2022/courses/exmd-504"> EXMD504: Biology of Cancer</a><br>
+        <a href="https://www.mcgill.ca/study/2021-2022/courses/biot-505"> BIOT505: Selected Topics in Biotechnology</a><br>
+        <a href="https://www.mcgill.ca/study/2021-2022/courses/mumt-301"> MUMT301: Music and the Internet</a><br>
+        <a href="https://www.mcgill.ca/study/2021-2022/courses/phys-224"> PHYS224: Physics of Music</a></p>
+      <h3>&#128107 My classmates: &#128107</h3>
+      <p><a href="https://mumt301.github.io/Sarah-Gao/">Sarah Gao</a><br>
+        <a href="https://mumt301.github.io/Asu_Simla_Ayduran/">Asu Simla Ayduran</a><br>
+        <a href="https://mumt301.github.io/orosze/">Eric Orosz</a><br>
+        <a href="https://mumt301.github.io/hteyssier/">Hector Teyssier</a><br>
+        <a href="https://mumt301.github.io/Jamie-Oneschuk-Repository-/">Jamie Oneschuk</a><br>
+        <a href="https://mumt301.github.io/naomifung01/">Naomi Fung</a><br>
+        <a href="https://mumt301.github.io/nicolesue/">Nicole Sue</a><br>
+        <a href="https://mumt301.github.io/raviraina/">Ravi Raina</a><br>
+        <a href="https://mumt301.github.io/Rebecca-Lee/">Rebecca Lee</a><br>
+        <a href="https://mumt301.github.io/SidAlHussaini/">Sid Al Hussaini</a><br>
+        <a href="https://mumt301.github.io/tibetahunbay_assignment1/">Tibet Ahunbay</a></p>
+      <h4>Click here to see all my <a href="assignments.html"><strong>assignments</strong></a> for this class!</h4>
+    </center>
   </body>
 </html>
