--- a/assignments.html
+++ b/assignments.html
@@ -8,7 +8,8 @@
     <center>
       <h2>Here are all my assignments for this class!</h2>
       <p><a href="questionnaire.txt">Assignment 1</a><br>
-          <a href="assignments.html">Assignment 2</a></p>
+          <a href="assignments.html">Assignment 2</a><br>
+          <a href="fanpage.html">Assignment 3</a></p>
       <p><a href="index.html">HOME</a></p>
     </center>  
   </body>
