--- a/fanmusic.html
+++ b/fanmusic.html
@@ -10,8 +10,8 @@
         <div class="column">
             <center>
                 <h1>M U S I C</h1>
-                <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="300" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/harry-styles/1226034336"></iframe>
-                <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="300" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/fine-line/1485802965"></iframe>    
+                <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="300" style="width:50%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/harry-styles/1226034336"></iframe>
+                <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="300" style="width:50%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/fine-line/1485802965"></iframe>    
             </center>
         </div>
         <div class="column">
@@ -21,19 +21,22 @@
     <center>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/E07s5ZYygMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/P3cffdsEXXw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </center>
-    <center>
-        <div class="row">
-            <div class="column">
-              <img src="harrymusic2.jpeg" alt="HS" style="width:100%">
+        <br>
+        <div class="pics">
+            <div class="picture">
+                <img src="harrymusic2.jpeg" alt="HS" height=100% width=100%>
             </div>
-            <div class="column">
-                <img src="harrymusic3.jpeg" alt="HS" style="width:100%">
+            <div class="picture">
+                <img src="harrymusic6.jpeg" alt="HS" height=100% width=100%>
+            </div>
+            <div class="picture">
+                <img src="harrymusic3.jpeg" alt="HS" height=100% width=100%>
             </div>
         </div>
-    </center>
-    <center>
-        <h3><a href="fanbiography.html"><strong>biography</strong></a> | <a href="fandiscography.html"><strong>discography</strong></a></h3>
+        <br>
+        <div class="links">
+            <h3><a href="fanbiography.html"><strong>biography</strong></a> | <a href="fandiscography.html"><strong>discography</strong></a></h3>
+        </div>
         <h1><a href="fanpage.html">HOME</a></h1>
     </center>
   </body>
