--- a/fanmusic.html
+++ b/fanmusic.html
@@ -40,9 +40,9 @@
         </div>
         <br>
         <div class="links">
-            <h3><a href="fanbiography.html"><strong>biography</strong></a> | <a href="fandiscography.html"><strong>discography</strong></a></h3>
+            <h3><a href="fanpage.html"><strong>harry's page</strong></a> | <a href="fanbiography.html"><strong>biography</strong></a> | <a href="fandiscography.html"><strong>discography</strong></a></h3>
         </div>
-        <h1><a href="fanpage.html">HOME</a></h1>
+        <h1><a href="index.html">HOME</a></h1>
     </center>
   </body>
 </html>
