--- a/fanpage.html
+++ b/fanpage.html
@@ -9,6 +9,7 @@
     <center>
       <h1>H A R R Y &#160 S T Y L E S</h1>
       <h3><a href="fanbiography.html"><strong>biography</strong></a> | <a href="fandiscography.html"><strong>discography</strong></a> | <a href="fanmusic.html"><strong>music</strong></a></h3>
+      <h2><a href="index.html">HOME</a></h2>
     </center>
   </body>
 </html>
