--- a/fanbiography.html
+++ b/fanbiography.html
@@ -27,9 +27,11 @@
             <p>After appearing in concert documentaries with One Direction, Styles made his feature film debut in Christopher Nolan's 2017 war thriller Dunkirk as an Allied soldier named Alex.</p>
         </div>
     </div>
+    <div class="links">
+        <h3><a href="fanpage.html"><strong>harry's page</strong></a> | <a href="fandiscography.html"><strong>discography</strong></a> | <a href="fanmusic.html"><strong>music</strong></a></h3>
+    </div>
     <center>
-        <h3><a href="fandiscography.html"><strong>discography</strong></a> | <a href="fanmusic.html"><strong>music</strong></a></h3>
-        <h1><a href="fanpage.html">HOME</a></h1>
+        <h1><a href="index.html">H O M E</a></h1>
     </center>
   </body>
 </html>
