--- a/fandiscography.html
+++ b/fandiscography.html
@@ -10,13 +10,13 @@
       <h1>D I S C O G R A P H Y</h1>
       <div class="row">
         <div class="column">
-          <img src="https://static.billboard.com/files/media/Harry-Styles-album-art-2017-billboard-1240-compressed.jpg" alt="Harry Styles album cover" style="width:75%">
+          <img src="https://static.billboard.com/files/media/Harry-Styles-album-art-2017-billboard-1240-compressed.jpg" alt="Harry Styles album cover" style="width:70%">
           <center>
             <h4>Harry Styles (2017)</h4>
           </center>
         </div>
         <div class="column">
-          <img src="harry styles 1.jpeg" alt="Harry Styles Fine Line" style="width:75%">
+          <img src="harrystyles1.jpeg" alt="Harry Styles Fine Line" style="width:70%">
           <center>
             <h4>Harry Styles (2019)</h4>
           </center>
@@ -24,8 +24,10 @@
       </div>
       <h2><a href="https://en.wikipedia.org/wiki/Harry_Styles"><strong>Wikipedia</strong></a> | <a href="https://musicbrainz.org/artist/7eb1ce54-a355-41f9-8d68-e018b096d427"><strong>MusicBrainz</strong></a> | <a href="https://www.allmusic.com/artist/harry-styles-mn0002854537"><strong>AllMusic</strong></a></h2>
       <br>
-      <h3><a href="fanbiography.html"><strong>biography</strong></a> | <a href="fanmusic.html"><strong>music</strong></a></h3>
-      <h1><a href="fanpage.html">H O M E</a></h1>
+      <div class="links">
+        <h3><a href="fanpage.html"><strong>harry's page</strong></a> | <a href="fanbiography.html"><strong>biography</strong></a> | <a href="fanmusic.html"><strong>music</strong></a></h3>
+      </div>
+      <h1><a href="index.html">H O M E</a></h1>
     </center>
   </body>
 </html>
