--- a/assignments.html
+++ b/assignments.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Assignment's page</title>
+    <link rel="stylesheet" href="assignmentsstyle.css">
   </head>
   <body>
     <center>
-      <h2>Here are all my assignments for this class!</h2>
-      <p><a href="questionnaire.txt">Assignment 1</a><br>
-          <a href="assignments.html">Assignment 2</a><br>
-          <a href="fanpage.html">Assignment 3</a></p>
-      <p><a href="index.html">HOME</a></p>
-    </center>  
+      <h1>A S S I G N M E N T S</h1>
+      <div class="links">
+        <h3><a href="questionnaire.txt"><strong>Assignment 1</strong></a> | <a href="index.html"><strong>Assignment 2</strong></a> | <a href="fanpage.html"><strong>Assignment 3</strong></a></h3>
+      </div>
+      <br>
+      <h1><a href="index.html">HOME</a></h1>
+    </center>
   </body>
 </html>
