--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="https://mumt301.github.io/raviraina/">Ravi Raina</a><br>
         <a href="https://mumt301.github.io/Rebecca-Lee/">Rebecca Lee</a><br>
         <a href="https://mumt301.github.io/SidAlHussaini/">Sid Al Hussaini</a><br>
-        <a href="https://mumt301.github.io/tibetahunbay_assignment1/">Tibet Ahunbay</a></p>
+        <a href="https://mumt301.github.io/tibetahunbay/">Tibet Ahunbay</a></p>
       <h4>Click here to see all my <a href="assignments.html"><strong>assignments</strong></a> for this class!</h4>
     </center>
   </body>
