--- a/fanbiography.html
+++ b/fanbiography.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="links">
-        <h3><a href="fanpage.html"><strong>harry's page</strong></a> | <a href="fandiscography.html"><strong>discography</strong></a> | <a href="fanmusic.html"><strong>music</strong></a></h3>
+        <h3><a href="fanpage.html"><strong>main page</strong></a> | <a href="fandiscography.html"><strong>discography</strong></a> | <a href="fanmusic.html"><strong>music</strong></a></h3>
     </div>
     <center>
         <h1><a href="index.html">H O M E</a></h1>
