--- a/fandiscography.html
+++ b/fandiscography.html
@@ -25,7 +25,7 @@
       <h2><a href="https://en.wikipedia.org/wiki/Harry_Styles"><strong>Wikipedia</strong></a> | <a href="https://musicbrainz.org/artist/7eb1ce54-a355-41f9-8d68-e018b096d427"><strong>MusicBrainz</strong></a> | <a href="https://www.allmusic.com/artist/harry-styles-mn0002854537"><strong>AllMusic</strong></a></h2>
       <br>
       <div class="links">
-        <h3><a href="fanpage.html"><strong>harry's page</strong></a> | <a href="fanbiography.html"><strong>biography</strong></a> | <a href="fanmusic.html"><strong>music</strong></a></h3>
+        <h3><a href="fanpage.html"><strong>main page</strong></a> | <a href="fanbiography.html"><strong>biography</strong></a> | <a href="fanmusic.html"><strong>music</strong></a></h3>
       </div>
       <h1><a href="index.html">H O M E</a></h1>
     </center>
