--- a/fanmusic.html
+++ b/fanmusic.html
@@ -40,7 +40,7 @@
         </div>
         <br>
         <div class="links">
-            <h3><a href="fanpage.html"><strong>harry's page</strong></a> | <a href="fanbiography.html"><strong>biography</strong></a> | <a href="fandiscography.html"><strong>discography</strong></a></h3>
+            <h3><a href="fanpage.html"><strong>main page</strong></a> | <a href="fanbiography.html"><strong>biography</strong></a> | <a href="fandiscography.html"><strong>discography</strong></a></h3>
         </div>
         <h1><a href="index.html">HOME</a></h1>
     </center>
