--- a/assignment4/comparison.html
+++ b/assignment4/comparison.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>C o m p a r i s o n &#160 o f &#160 A u d i o &#160 C o m p r e s s i o n &#160 M e t h o d s</h1>
+    <center>
+        <p>**you cannot hear the residual audio effect for the AC3 and M4A lossy compression formats because my Audacity program created extra silent space <br>
+            when compressing the original audio samples, meaning the original and inverted compressed audio samples do not perfectly align**</p>
+    </center>
     <section id="comparison"></section>
   </body>
   <script src="comparisonscript.js"></script>
