--- a/assignment4/comparison.html
+++ b/assignment4/comparison.html
@@ -14,5 +14,9 @@
     <section id="comparison"></section>
   </body>
   <script src="comparisonscript.js"></script>
-  <center><h1><a href="index.html">H O M E</a></h1></center>
+  <br>
+  <center>
+    <h3><a href="assignments.html">assignment's page</a></h3>  
+    <h1><a href="index.html">H O M E</a></h1>
+  </center>
 </html>
