--- a/assignment4/comparison.html
+++ b/assignment4/comparison.html
@@ -16,7 +16,7 @@
   <script src="comparisonscript.js"></script>
   <br>
   <center>
-    <h3><a href="assignments.html">assignment's page</a></h3>  
-    <h1><a href="index.html">H O M E</a></h1>
+    <h3><a href="../assignments.html">assignment's page</a></h3>  
+    <h1><a href="../index.html">H O M E</a></h1>
   </center>
 </html>
