updated assignment page

--- a/assignments.html
+++ b/assignments.html
@@ -9,7 +9,7 @@
     <center>
       <h1>A S S I G N M E N T S</h1>
       <div class="links">
-        <h3><a href="questionnaire.txt"><strong>Assignment 1</strong></a> | <a href="index.html"><strong>Assignment 2</strong></a> | <a href="fanpage.html"><strong>Assignment 3</strong></a> | <a href="assignment4/comparison.html"><strong>Assignment 4</strong></a></h3>
+        <h3><a href="questionnaire.txt"><strong>Assignment 1</strong></a> | <a href="index.html"><strong>Assignment 2</strong></a> | <a href="fanpage.html"><strong>Assignment 3</strong></a> | <a href="assignment4/comparison.html"><strong>Assignment 4</strong></a> | <a href="assignment6.html"><strong>Assignment 6</strong></a></h3>
       </div>
       <br>
       <h1><a href="index.html">HOME</a></h1>
