--- a/assignment6.html
+++ b/assignment6.html
@@ -12,6 +12,7 @@
           <h1>M U S I C B R A I N Z &#160 A P I &#160 C A L L</h1>
         </div>
         <p>Retrieve the album discography from all your favorite artists!</p>
+        <!-- Step 1: create the form -->
         <form id="artist" method="get">
             <label for="name">Artist name?</label>
             <input type="text" name="artist" id="name">
