--- a/assignment7.html
+++ b/assignment7.html
@@ -21,6 +21,8 @@
 
     <p id="userfrequency"></p>
     <p id="usernotename"></p>
+    <p id="userfrequency2"></p>
+    <p id="usernotename2"></p>
 
     <br>
 
