--- a/final_project/finalproject.html
+++ b/final_project/finalproject.html
@@ -225,8 +225,8 @@
 </body>
 <br>
 <center>
-  <h3><a href="assignments.html">assignment's page</a></h3>
-  <h1><a href="index.html">H O M E</a></h1>
+  <h3><a href="../assignments.html">assignment's page</a></h3>  
+  <h1><a href="../index.html">H O M E</a></h1>
 </center>
 
 </html>
