--- a/final_project/finalproject.html
+++ b/final_project/finalproject.html
@@ -107,9 +107,7 @@
                     </div>
                 </div>
 
-
                 <p id="currentWeather"></p>
-
 
             </fieldset>
     </center>
@@ -122,6 +120,11 @@
 
     <br>
 
+    <h3 id='album_response_title'></h3>
+    <h4 id='album_response_subtitle'></h4>
+
+    <br>
+    
     <div class="album_response">
         <div>
             <figure>
